--- a/graph-base.html
+++ b/graph-base.html
@@ -106,11 +106,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Conteúdos</a></li>
 <li class="chapter" data-level="2" data-path="revisao.html"><a href="revisao.html"><i class="fa fa-check"></i><b>2</b> Revisão</a></li>
 <li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a><ul>
-<li class="chapter" data-level="3.1" data-path="graph-base.html"><a href="graph-base.html#historico"><i class="fa fa-check"></i><b>3.1</b> Histórico</a><ul>
-<li class="chapter" data-level="3.1.1" data-path="graph-base.html"><a href="graph-base.html#base-default"><i class="fa fa-check"></i><b>3.1.1</b> Base (<em>default</em>)</a></li>
-<li class="chapter" data-level="3.1.2" data-path="graph-base.html"><a href="graph-base.html#lattice-lattice"><i class="fa fa-check"></i><b>3.1.2</b> Lattice (<em>lattice</em>)</a></li>
-<li class="chapter" data-level="3.1.3" data-path="graph-base.html"><a href="graph-base.html#ggplot2-ggplot2"><i class="fa fa-check"></i><b>3.1.3</b> GGPlot2 (<em>ggplot2</em>)</a></li>
-</ul></li>
+<li class="chapter" data-level="3.1" data-path="graph-base.html"><a href="graph-base.html#historico"><i class="fa fa-check"></i><b>3.1</b> Histórico</a></li>
+<li class="chapter" data-level="3.2" data-path="graph-base.html"><a href="graph-base.html#base-default"><i class="fa fa-check"></i><b>3.2</b> Base (<em>default</em>)</a></li>
+<li class="chapter" data-level="3.3" data-path="graph-base.html"><a href="graph-base.html#lattice-lattice"><i class="fa fa-check"></i><b>3.3</b> Lattice (<em>lattice</em>)</a></li>
+<li class="chapter" data-level="3.4" data-path="graph-base.html"><a href="graph-base.html#ggplot2-ggplot2"><i class="fa fa-check"></i><b>3.4</b> GGPlot2 (<em>ggplot2</em>)</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="graph-dyn.html"><a href="graph-dyn.html"><i class="fa fa-check"></i><b>4</b> Gráficos Interativos e dinâmicos no R</a></li>
 <li class="chapter" data-level="5" data-path="model-theo.html"><a href="model-theo.html"><i class="fa fa-check"></i><b>5</b> Modelo de Simulação (Conceitos Teóricos)</a><ul>
@@ -151,16 +150,41 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h2><span class="header-section-number">3.1</span> Histórico</h2>
 <p>As primeiras versões públicas do R apresentavam um grande diferencial em relação aos outros softwares de análise de dados da época (início 1990) que era a flexibilidade de ajustes e formatos. Esta facilidade e poder de ajustar/alterar todos os itens de um gráfico, aliados a facilidade de codificar modelos de forma facilitada, compoem os principais tópicos do sucesso da ferramenta no que se refere ao seu uso como software de análise de dados e computação científica.</p>
 <p>Ao se instalar o R pela primeira vez, o mesmo oferece um conjunto de funcinalidades básicas e muitas outras obitidas por meio de plugins - que são chamadas de <em>library</em> (bibliotecas). Em relação aos gráficos nos temos as seguinte opções (lista não exasustiva):</p>
-<div id="base-default" class="section level3">
-<h3><span class="header-section-number">3.1.1</span> Base (<em>default</em>)</h3>
 </div>
-<div id="lattice-lattice" class="section level3">
-<h3><span class="header-section-number">3.1.2</span> Lattice (<em>lattice</em>)</h3>
+<div id="base-default" class="section level2">
+<h2><span class="header-section-number">3.2</span> Base (<em>default</em>)</h2>
+<p>Gráficos disponibilidados em toda instalação do R:</p>
+<ul>
+<li><em>hist</em></li>
+<li><em>boxplot</em></li>
+<li><em>plot</em></li>
+<li>density plot (<em>plot(density(.))</em>)</li>
+</ul>
 </div>
-<div id="ggplot2-ggplot2" class="section level3">
-<h3><span class="header-section-number">3.1.3</span> GGPlot2 (<em>ggplot2</em>)</h3>
+<div id="lattice-lattice" class="section level2">
+<h2><span class="header-section-number">3.3</span> Lattice (<em>lattice</em>)</h2>
+<p>Gráficos mais elaborados, desenvolvidos no Bell Labs (AT&amp;T / Lucent) e bastante usando no software <em>S</em> (antecessor do <em>R</em>). Para obter mais informações, tutoriais e alguns exemplos, veja <a href="http://lattice.r-forge.r-project.org/index.php">Lattice Home</a>.</p>
+<p>Alguns exemplos de gráficos:</p>
+<ul>
+<li>Histogram;</li>
+<li>BWPlot (Box-Whisker);</li>
+<li>XYPlot;</li>
+</ul>
+<p>A Lattice, trabalha o conceito de painéis de gráficos (panel e prepanel).</p>
+</div>
+<div id="ggplot2-ggplot2" class="section level2">
+<h2><span class="header-section-number">3.4</span> GGPlot2 (<em>ggplot2</em>)</h2>
+<p>Gráficos elaborados, criado a partir do conceito de “Gramática de Gráficos” e desenvolvido na Universidade de IOWA por Hadley Wickham, durante o seu Doutorado.</p>
+<p>A GGPlot é a ferramenta mais utilizada atualmente para criar gráficos no R e o tecnica de gramática de gráficos e utilizada em outras ferramentas (Principalmente Javascript) de visualização de dados. Para mais informações, documentação, tutoriais e exemplos, veja em <a href="http://ggplot2.org/">GGplot2 Home</a>.</p>
+<p>Alguns exemplos de gráficos:</p>
+<ul>
+<li>Linhas;</li>
+<li>Curvas de ajuste (linear e não-linear);</li>
+<li>Pontos;</li>
+<li>Paineis;</li>
+</ul>
+<p>A GGPlot, trabalha o conceito de camadas de gráficos (layers).</p>
 
-</div>
 </div>
 </div>
             </section>
